jdk 1.4 compatibility fixes
git-svn-id: https://src.springframework.org/svn/spring-osgi/trunk@582 2e8e966d-6415-0410-94b9-dc4e65435d03